--- a/project/pages/admin.html
+++ b/project/pages/admin.html
@@ -42,7 +42,6 @@
                 <ul>
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="product.html">สินค้า</a></li>
-                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
                     <li><a href="about.html">ข่าวสาร</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
@@ -82,8 +81,8 @@
                     </div>
                 </div>
                 <div class="form-group" style="margin-top:15px;">
-                    <label>URL รูปภาพ</label>
-                    <input type="text" id="pImg" class="form-control" placeholder="https://..." required>
+                    <label>แนบรูปภาพ</label>
+                    <input type="file" id="pImg" class="form-control" accept="image/*" required>
                 </div>
                 <button type="submit" class="btn-save">บันทึกข้อมูล</button>
             </form>
@@ -97,6 +96,7 @@
                         <tr>
                             <th>รูป</th>
                             <th>ชื่อ</th>
+                            <th>รายละเอียด</th>
                             <th>ราคา</th>
                             <th>สต็อก</th>
                             <th>จัดการ</th>
@@ -116,24 +116,33 @@
         
         form.addEventListener('submit', function(e) {
             e.preventDefault();
-            const newProduct = {
-                id: Date.now(),
-                name: document.getElementById('pName').value,
-                desc: document.getElementById('pDesc').value,
-                age: document.getElementById('pAge').value,
-                feature: document.getElementById('pFeature').value,
-                price: document.getElementById('pPrice').value,
-                stock: document.getElementById('pStock').value,
-                img: document.getElementById('pImg').value
+            const fileInput = document.getElementById('pImg');
+            if (fileInput.files.length === 0) {
+                alert('กรุณาเลือกไฟล์รูปภาพ');
+                return;
+            }
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                const imgData = e.target.result;
+                const newProduct = {
+                    id: Date.now(),
+                    name: document.getElementById('pName').value,
+                    desc: document.getElementById('pDesc').value,
+                    age: document.getElementById('pAge').value,
+                    feature: document.getElementById('pFeature').value,
+                    price: document.getElementById('pPrice').value,
+                    stock: document.getElementById('pStock').value,
+                    img: imgData
+                };
+                let products = JSON.parse(localStorage.getItem('easyrice_db')) || [];
+                products.push(newProduct);
+                localStorage.setItem('easyrice_db', JSON.stringify(products));
+                alert('บันทึกข้อมูลแล้ว! กรุณารีเฟรชหน้าสินค้าเพื่อดูการเปลี่ยนแปลง');
+                form.reset();
+                loadProducts();
             };
-
-            let products = JSON.parse(localStorage.getItem('easyrice_db')) || [];
-            products.push(newProduct);
-            localStorage.setItem('easyrice_db', JSON.stringify(products)); // บันทึกลง LocalStorage
-            
-            alert('บันทึกข้อมูลแล้ว! กรุณารีเฟรชหน้าสินค้าเพื่อดูการเปลี่ยนแปลง');
-            form.reset();
-            loadProducts();
+            reader.readAsDataURL(file);
         });
 
         function loadProducts() {
@@ -156,6 +165,7 @@
                     <tr>
                         <td><img src="${p.img}" width="50" style="border-radius:4px;"></td>
                         <td>${p.name}</td>
+                        <td>${p.desc}</td>
                         <td>${p.price} บ.</td>
                         <td>${p.stock}</td>
                         <td><button onclick="deleteProduct(${p.id})" class="btn-del"><i class="fas fa-trash"></i></button></td>
