--- a/project/pages/forgot-password.html
+++ b/project/pages/forgot-password.html
@@ -10,6 +10,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        .alert-box {
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .alert-error {
+            background-color: #ffebee;
+            color: #c62828;
+            border: 1px solid #e57373;
+        }
+        .alert-success {
+            background-color: #e8f5e9;
+            color: #2e7d32;
+            border: 1px solid #81c784;
+        }
+        .back-to-login {
+            color: #2e7d32;
+            text-decoration: none;
+            font-weight: 500;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .back-to-login:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body class="login-page-body">
 
@@ -63,28 +94,48 @@
 
 
     <script>
-        document.getElementById('forgotForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const email = document.getElementById('email').value;
-            alert('ระบบได้ส่งลิงก์รีเซ็ตรหัสผ่านไปยัง: ' + email + ' เรียบร้อยแล้ว!');
-            window.location.href = 'sign-in.html';
-        });
+document.getElementById('forgotForm').addEventListener('submit', function(e) {
+    e.preventDefault();
 
-        document.getElementById('forgotForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const email = document.getElementById('email').value;
-        const alertBox = document.getElementById('alertBox');
-        
-        // จำลองกรณีที่กรอกผิด (เช่น ถ้าไม่ใช่อีเมลที่เรากำหนดไว้)
-        if (email !== "test@admin.com") { 
-            alertBox.style.display = "flex";
-            alertBox.classList.add('alert-error');
-        } else {
-            alert('ระบบได้ส่งลิงก์ไปยังอีเมลของคุณแล้ว!');
-            window.location.href = 'sign-in.html';
-        }
-    });
-    </script>
+    const email = document.getElementById('email').value.trim();
+    const alertBox = document.getElementById('alertBox');
+
+    if (!email) {
+        showAlert('กรุณากรอกอีเมล', false);
+        return;
+    }
+
+    // Check if email exists in users
+    const users = JSON.parse(localStorage.getItem('easyrice_users')) || [];
+    const userExists = users.some(user => user.email === email);
+
+    if (!userExists) {
+        showAlert('ไม่พบอีเมลนี้ในระบบ กรุณาตรวจสอบอีเมลหรือสมัครสมาชิกใหม่', false);
+        return;
+    }
+
+    // Simulate sending reset email
+    showAlert('ระบบได้ส่งลิงก์รีเซ็ตรหัสผ่านไปยังอีเมลของคุณแล้ว กรุณาตรวจสอบกล่องจดหมาย', true);
+
+    setTimeout(() => {
+        window.location.href = 'sign-in.html';
+    }, 2000);
+});
+
+function showAlert(message, success) {
+    const alertBox = document.getElementById('alertBox');
+    const alertMessage = document.getElementById('alertMessage');
+
+    alertMessage.textContent = message;
+    alertBox.style.display = 'flex';
+
+    if (success) {
+        alertBox.className = 'alert-box alert-success';
+    } else {
+        alertBox.className = 'alert-box alert-error';
+    }
+}
+</script>
 <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
