--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -7,8 +7,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/project/css/style.css"> 
-</head>
+    <link rel="stylesheet" href="/project/css/style.css">
 
 <body> 
     <header class="navbar">
@@ -216,5 +215,6 @@
             displayProducts();
         };
     </script>
+    <script src="/project/js/easyrice.js"></script>
 </body>
 </html>
