--- a/project/pages/admin.html
+++ b/project/pages/admin.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyRice Admin - จัดการสินค้า</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/project/css/style.css">
-    <style>
+    <link rel="stylesheet" href="/css/style.css">
         :root { 
             --primary: #4CAF50; 
             --bg: #f4f7f6; 
