--- a/project/pages/admin.html
+++ b/project/pages/admin.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyRice Admin - จัดการสินค้า</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/project/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
         :root { 
             --primary: #4CAF50; 
             --bg: #f4f7f6; 
