--- a/project/pages/product.html
+++ b/project/pages/product.html
@@ -34,9 +34,14 @@
         a { 
             text-decoration: none; 
         }
-
-        /* Navbar */
-        .navbar { background: #fff; padding: 15px 0; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+        .navbar .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 20px;
+        }
         .navbar .container { display: flex; justify-content: space-between; align-items: center; }
         .logo { font-size: 1.5rem; font-weight: bold; color: var(--primary); }
         nav ul { list-style: none; display: flex; gap: 20px; padding: 0; margin: 0; }
