--- a/project/pages/product.html
+++ b/project/pages/product.html
@@ -99,15 +99,15 @@
 
 <body>
 
-    <header class="navbar">
+   <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
             <ul>
-                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="index.html" class=>หน้าแรก</a></li>
                 <li><a href="product.html" class="active">สินค้า</a></li>
-                <li><a href="about.html" >ข่าวสาร</a></li>
-                <li><a href="contact.html" >ติดต่อ</a></li>
+                <li><a href="about.html">ข่าวสาร</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
             </ul>
         </nav>
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
