--- a/project/pages/sign-in.html
+++ b/project/pages/sign-in.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
                 <li><a href="about.html">ข่าวสาร</a></li>
-                <li><a href="contact.html" class="active">ติดต่อ</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
             </ul>
         </nav>
             <a href="sign-in.html" class="btn-signin active">เข้าสู่ระบบ</a>
