--- a/project/pages/history.html
+++ b/project/pages/history.html
@@ -56,6 +56,7 @@
                 <li><a href="product.html">สินค้า</a></li>
                 <li><a href="about.html">ข่าวสาร</a></li>
                 <li><a href="contact.html">ติดต่อ</a></li>
+                <li><a href="history.html" class="active">ประวัติการสั่งซื้อ</a></li>
             </ul>
         </nav>
             <div class="user-profile">
