--- a/project/pages/product.html
+++ b/project/pages/product.html
@@ -47,7 +47,20 @@
         nav ul { list-style: none; display: flex; gap: 20px; padding: 0; margin: 0; }
         nav a { color: var(--dark); transition: 0.3s; }
         nav a.active { color: var(--primary); font-weight: 500; }
-        .btn-signin { background: var(--primary); color: white; padding: 8px 15px; border-radius: 5px; }
+        .btn-signin {
+            background: transparent;
+            color: var(--primary);
+            padding: 8px 15px;
+            border-radius: 5px;
+            border: 2px solid var(--primary);
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .btn-signin:hover {
+            background: var(--primary);
+            color: #fff;
+        }
 
 
         /* Page Header */
