--- a/project/pages/about.html
+++ b/project/pages/about.html
@@ -41,7 +41,12 @@
                 <p class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</p>
                 <h3>ทำไมต้องใช้ต้นกล้าอายุ 20 วัน?</h3>
                 <p>ต้นกล้าในวัยนี้รากกำลังเดินดี เมื่อนำไปปักดำจะฟื้นตัวเร็ว แตกกอได้ดีกว่าต้นกล้าแก่...</p>
-                <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                <a href="https://newwebs2.ricethailand.go.th/webmain/rkb3/title-index.php-file%3Dcontent.php%26id%3D115-2.htm?utm_source"
+                    class="read-more-btn"
+                    target="_blank">
+                    อ่านต่อ <i class="fas fa-arrow-right"></i>
+                </a>
+
             </div>
         </article>
 
@@ -52,7 +57,12 @@
                 <p class="news-date"><i class="far fa-calendar-alt"></i> 12 ม.ค. 2567</p>
                 <h3>วิธีเลือกพันธุ์ข้าวให้เหมาะกับดิน</h3>
                 <p>ดินเค็ม ดินเปรี้ยว หรือพื้นที่ลุ่มน้ำท่วมถึง การเลือกพันธุ์ข้าวให้ถูกโฉลกกับดินจะช่วยเพิ่มผลผลิต...</p>
-                <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                <a href="https://kas.siamkubota.co.th/knowledge"
+                    class="read-more-btn"
+                    target="_blank">
+                    อ่านต่อ <i class="fas fa-arrow-right"></i>
+                </a>
+
             </div>
         </article>
 
@@ -63,7 +73,12 @@
                 <p class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</p>
                 <h3>เทคนิคเตรียมดินก่อนรถดำลง</h3>
                 <p>การปรับหน้าดินให้เรียบเสมอและการรักษาระดับน้ำ เป็นหัวใจสำคัญที่จะทำให้รถดำทำงานได้ราบรื่น...</p>
-                <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                <a href="https://www.rakbankerd.com/agriculture/print.php?id=4137&s=tblrice&"
+                    class="read-more-btn"
+                    target="_blank">
+                    อ่านต่อ <i class="fas fa-arrow-right"></i>
+                </a>
+
             </div>
         </article>
     </div>
