--- a/project/pages/product.html
+++ b/project/pages/product.html
@@ -117,7 +117,7 @@
             <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
             <ul>
-                <li><a href="index.html" class=>หน้าแรก</a></li>
+                <li><a href="index.html">หน้าแรก</a></li>
                 <li><a href="product.html" class="active">สินค้า</a></li>
                 <li><a href="about.html">ข่าวสาร</a></li>
                 <li><a href="contact.html">ติดต่อ</a></li>
