--- a/project/pages/checkout.html
+++ b/project/pages/checkout.html
@@ -194,15 +194,18 @@
 
             // Initialize map
             var map = L.map('map').setView([13.7563, 100.5018], 10);
-            L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-                attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map);
-            var marker = L.marker([13.7563, 100.5018], {draggable: true}).addTo(map);
-            marker.on('dragend', function(e) {
-                var latlng = e.target.getLatLng();
-                document.getElementById('lat').value = latlng.lat;
-                document.getElementById('lng').value = latlng.lng;
+            var marker = L.marker([13.7563, 100.5018]).addTo(map);
+            
+            // ปักหมุดโดยคลิกที่แผนที่
+            map.on('click', function(e) {
+                marker.setLatLng(e.latlng);
+                document.getElementById('lat').value = e.latlng.lat.toFixed(6);
+                document.getElementById('lng').value = e.latlng.lng.toFixed(6);
             });
+            
             document.getElementById('lat').value = 13.7563;
             document.getElementById('lng').value = 100.5018;
         });
