--- a/project/pages/history.html
+++ b/project/pages/history.html
@@ -45,7 +45,7 @@
         }
     </style>
 </head>
-<body class="login-page-body">
+<body>
 
     <header class="navbar">
         <div class="container">
@@ -61,7 +61,7 @@
         </nav>
             <div class="user-profile">
                 <span>สวัสดี, คุณสมชาย</span>
-                <a href="sign-in.html" class="btn-signin" style="margin-left:10px;">ออกจากระบบ</a>
+                <a href="sign-in.html" class="btn-signin" style="margin-left:10px; background: #ff5252 !important; color: white !important;">ออกจากระบบ</a>
             </div>
         </div>
     </header>
