--- a/project/pages/history.html
+++ b/project/pages/history.html
@@ -50,7 +50,12 @@
     <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
-            <nav>
+            <button class="hamburger" id="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav id="navMenu">
             <ul>
                 <li><a href="index.html">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
@@ -245,5 +250,21 @@ document.querySelector('.btn-signin').addEventListener('click', function(e) {
         // In real app, clear session/token
         window.location.href = 'sign-in.html';
     }
+});
+
+// Mobile menu toggle
+function toggleMenu() {
+    const hamburger = document.getElementById('hamburger');
+    const navMenu = document.getElementById('navMenu');
+    hamburger.classList.toggle('active');
+    navMenu.classList.toggle('active');
+}
+
+// Close menu when link clicked
+document.querySelectorAll('#navMenu a').forEach(link => {
+    link.addEventListener('click', () => {
+        document.getElementById('hamburger').classList.remove('active');
+        document.getElementById('navMenu').classList.remove('active');
+    });
 });
 </script>
