--- a/project/pages/forgot-password.html
+++ b/project/pages/forgot-password.html
@@ -45,7 +45,12 @@
     <header class="navbar">
         <div class="container">
             <a href="#" class="logo">🌾 EasyRice</a>
-            <nav>
+            <button class="hamburger" id="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav id="navMenu">
             <ul>
                 <li><a href="index.html">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
@@ -171,6 +176,24 @@ function showAlert(message, success) {
 		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
 	}
 	// ]]>
+</script>
+
+<script>
+	// Mobile menu toggle
+	function toggleMenu() {
+		const hamburger = document.getElementById('hamburger');
+		const navMenu = document.getElementById('navMenu');
+		hamburger.classList.toggle('active');
+		navMenu.classList.toggle('active');
+	}
+
+	// Close menu when link clicked
+	document.querySelectorAll('#navMenu a').forEach(link => {
+		link.addEventListener('click', () => {
+			document.getElementById('hamburger').classList.remove('active');
+			document.getElementById('navMenu').classList.remove('active');
+		});
+	});
 </script>
 </body>
 </html>
