--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -15,7 +15,12 @@
     <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
-            <nav>
+            <button class="hamburger" id="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav id="navMenu">
             <ul>
                 <li><a href="index.html" class="active">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
@@ -216,7 +221,23 @@
         window.onload = function () {
             displayProducts();
         };
+
+        // Hamburger Menu Toggle
+        function toggleMenu() {
+            const hamburger = document.getElementById('hamburger');
+            const navMenu = document.getElementById('navMenu');
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        }
+
+        // Close menu when link is clicked
+        document.querySelectorAll('#navMenu a').forEach(link => {
+            link.addEventListener('click', () => {
+                document.getElementById('hamburger').classList.remove('active');
+                document.getElementById('navMenu').classList.remove('active');
+            });
+        });
     </script>
-    <script src="/project/js/easyrice.js"></script>
+    <script src="../js/easyrice.js"></script>
 </body>
 </html>
