--- a/frontend/app/pages/about.html
+++ b/frontend/app/pages/about.html
@@ -17,7 +17,7 @@
 
 <header class="navbar">
     <div class="container">
-        <a href="index.html" class="logo">🌾 EasyRice</a>
+        <a href="../" class="logo">🌾 EasyRice</a>
         <button class="hamburger" id="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
@@ -25,7 +25,7 @@
         </button>
         <nav id="navMenu">
             <ul>
-                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="../">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
                 <li><a href="about.html"class="active">ข่าวสาร</a></li>
                 <li><a href="contact.html">ติดต่อ</a></li>
