--- a/frontend/app/pages/forgot-password.html
+++ b/frontend/app/pages/forgot-password.html
@@ -52,7 +52,7 @@
             </button>
             <nav id="navMenu">
             <ul>
-                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="../">หน้าแรก</a></li>
                 <li><a href="product.html">สินค้า</a></li>
                 <li><a href="about.html">ข่าวสาร</a></li>
                 <li><a href="contact.html" class="active">ติดต่อ</a></li>
